[package]
name = "passworder"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "A simple strong password generator"
homepage = "https://github.com/safe-stash/passworder"
documentation = "https://docs.rs/passworder"
repository = "https://github.com/safe-stash/passworder"
readme = "README.md"
keywords = ["cryptography", "password", "generator", "password-generator"]
categories = ["cryptography"]

[dependencies]
rand = "0.8.5"
